Issue #18672: Fixed format specifiers for Py_ssize_t in debugging output in the _sre moduel.